infrastructure/k8s/books-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: books
  template:
    metadata:
      labels:
        component: books
    spec:
      containers:
        - name: lm-backend
          imagePullPolicy: Always
          image: josemagne/lm-backend:1.0.3
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: dockersecret
