infrastructure/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        components: frontend
      spec:
        containers:
          - name: lm-frontend
            image: josemagne/lm-frontend:1.0.0
            ports:
              - containerPort: 80
        imagePullSecrets:
          - name: dockersecret
