infrastructure/k8s/books-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: books
  ports:
    - port: 4000
      targetPort: 4000
